--- a/SymptomAnalyzer/SymptomAnalyzer.csproj
+++ b/SymptomAnalyzer/SymptomAnalyzer.csproj
@@ -1,21 +1,41 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>db66258d-deab-4bda-86d1-a153f3b8cd69</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+    <PackageReference Include="Microsoft.Extensions.ML" Version="1.7.1" />
     <PackageReference Include="Microsoft.ML" Version="1.7.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
-
   <ItemGroup>
-    <None Update="Assets\MLModel.zip">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup Label="SymptomAnalyzerMLModel">
+    <None Include="SymptomAnalyzerMLModel.consumption.cs">
+      <DependentUpon>SymptomAnalyzerMLModel.mbconfig</DependentUpon>
+    </None>
+    <None Include="SymptomAnalyzerMLModel.training.cs">
+      <DependentUpon>SymptomAnalyzerMLModel.mbconfig</DependentUpon>
+    </None>
+    <None Include="SymptomAnalyzerMLModel.zip">
+      <DependentUpon>SymptomAnalyzerMLModel.mbconfig</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
 </Project>
